--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,6 +7,7 @@
 
         <div id="link">
             <input placeholder="Digite aqui o Link" type="text" name="link" id="link-input" required>
+            <button onclick="" type="submit" id="button">Baixar</button>
         </div>
 
         <div>
@@ -16,6 +17,6 @@
                 <option value="MP4">MP4</option>
             </select>
         </div>
-        <button type="submit" id="button">Baixar</button>
+        
     </form>
 </fieldset>
