--- a/static/style.css
+++ b/static/style.css
@@ -41,17 +41,13 @@ body {
     width: 50px;
 }
 
-#link {
-
-}
-
 #link-input {
     width: 250px;
     padding: 8px;
     border: 1px solid black;
     font-size: 14px;
+    border-radius: 5px;
 }
-
 
 #button {
     background-color: rgb(206, 2, 2);
