--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,33 +9,28 @@ body {
 }
 
 #area {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     border-radius: 14px;
     background-color: white;
-    border: 0.5px solid black;
+    box-shadow: 0px 0px 30px;
     font-family: sans-serif;
-    padding: 35px 100px ;
+    padding: 35px;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    width: 500px;
+    height: 300px;
 }
 
-#form {
+#videodetails {
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
-    width: 200px;
-}
-
-#logo {
-    display: flex;
-    flex-direction: column-reverse;
-    flex-wrap: wrap-reverse;
-    align-items: center;
-    justify-content: center;
-    gap: 1px;
-    margin-bottom: 10px;
 }
 
 #title-logo {
@@ -45,6 +40,17 @@ body {
     margin-bottom: 10px;
 }
 
+#title-media {
+    font-size: 12pt;
+    font-weight: bold;
+    text-align:center;
+    margin-bottom: 5px;
+    margin-top: 10px;
+    text-decoration: none;
+    color: black;
+    outline: none;
+}
+
 #img-logo {
     width: 70px;
 }
@@ -52,22 +58,7 @@ body {
 #link {
     display: flex;
     flex-wrap: nowrap;
-}
-
-#link2 {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    gap: 10px;
-}
-
-
-#link-input {
-    width: 250px;
-    padding: 8px;
-    font-size: 15px;
-    border: 0.5px solid black;
-    outline: none;
+    margin-bottom: 20px;
 }
 
 #button {
@@ -80,33 +71,55 @@ body {
     border-right: 0.5px solid black;
     border-top: 0.5px solid black;
     border-bottom: 0.5px solid black;
-}
-
-#button2 {
-    background-color: rgb(206, 2, 2);
-    border: none;
-    font-size: 14px;
-    cursor: pointer;
-    color: white;
-    padding: 15px 50px;
-    border: 0.5px solid black ;
-    border-radius: 15px;
-}
-
-#link-a {
-    background-color: rgb(206, 2, 2);
-    border: none;
-    font-size: 14px;
-    cursor: pointer;
-    color: white;
-    padding: 15px 50px;
-    border: 0.5px solid black ;
-    border-radius: 15px;
     text-decoration: none;
 }
 
-#button:hover, #button2:hover, #link-a:hover {
+#link-input {
+    width: 250px;
+    padding: 8px;
+    font-size: 15px;
+    border: 0.5px solid black;
+    outline: none;
+
+}
+
+#logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.container-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.button {
+    background-color: rgb(206, 2, 2);
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    color: white;
+    padding: 10px 30px;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-left: 15px;
+}
+
+.button:hover {
     background-color: rgb(116, 3, 3);
 }
+
+#thumb {
+    width: 200px;
+    border-radius: 20px;
+}
+
+
 
 
