--- a/views/download.handlebars
+++ b/views/download.handlebars
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/youtube-logo.png">
 </head>
-<body>
+<body >
     <section id="area">
             <div id="videodetails">
                 <img id="thumb" src="{{thumb}}" alt="">
@@ -16,7 +16,7 @@
             </div>
     
             <div class="container-button">
-                <a class="button" href="/downloaded" type="submit">Baixar</a>
+                <a class="button" href="/download" type="submit">Baixar</a>
                 <a class="button" href="/">Voltar</a>
             </div>
         
